tests/cases/errors/missing_next.b
REM Test: FOR without NEXT (should fail)
FOR i% = 1 TO 10
  PRINT i%
